fixed button visiblity on mobile of download bar

--- a/css/styles-download.css
+++ b/css/styles-download.css
@@ -31,6 +31,7 @@
   }
 .toggle-btn{
   visibility: visible;
+  background-color: #fcfcfc;
 }
 #sidebar.active {
   left:0px;
